# TAMT-Traversability-Assessment-of-Martian-Terrain

./: .gitignore  README.md  setup_env.sh  setup_venv.sh  tempCodeRunnerFile.python
dataset/AI4MARS_YOLO_sample_100/: data.yaml  labels.cache
dataset/AI4MARS_YOLO_sample_100/labels/: train_NLA_397681372EDR_F0020000AUT_04096M1.txt  train_NLA_397681398EDR_F0020000AUT_04096M1.txt  train_NLA_397681429EDR_F0020000AUT_04096M1.txt  train_NLA_397681455EDR_F0020000AUT_04096M1.txt  train_NLA_397681486EDR_F0020000AUT_04096M1.txt  train_NLA_397681520EDR_F0020000AUT_04096M1.txt  train_NLA_397681553EDR_F0020000AUT_04096M1.txt  train_NLA_397681586EDR_F0020000AUT_04096M1.txt  train_NLA_397681619EDR_F0020000AUT_04096M1.txt  train_NLA_397681736EDR_F0020000AUT_04096M1.txt  train_NLA_397681768EDR_F0020000AUT_04096M1.txt  train_NLA_397681801EDR_F0020000AUT_04096M1.txt  train_NLA_397681834EDR_F0020000AUT_04096M1.txt  train_NLA_397681867EDR_F0020000AUT_04096M1.txt  train_NLA_397681893EDR_F0020000AUT_04096M1.txt  train_NLA_397681917EDR_F0020000AUT_04096M1.txt  train_NLA_397681941EDR_F0020000AUT_04096M1.txt  train_NLA_397681967EDR_F0020000AUT_04096M1.txt  train_NLA_397681999EDR_F0020000AUT_04096M1.txt  train_NLA_397682034EDR_F0020000AUT_04096M1.txt  train_NLA_397682119EDR_F0020000AUT_04096M1.txt  train_NLA_397682152EDR_F0020000AUT_04096M1.txt  train_NLA_397682189EDR_F0020000AUT_04096M1.txt  train_NLA_397682285EDR_F0020000AUT_04096M1.txt  train_NLA_397682316EDR_F0020000AUT_04096M1.txt  train_NLA_397682394EDR_F0020000AUT_04096M1.txt  train_NLA_397682534EDR_F0020000AUT_04096M1.txt  train_NLA_398380694EDR_F0030000NCAM15000M1.txt  train_NLA_398381736EDR_F0030000NCAM15000M1.txt  train_NLA_398561160EDR_F0030004NCAM15000M1.txt  train_NLA_398561738EDR_F0030004NCAM00400M1.txt  train_NLA_398561766EDR_F0030004NCAM00400M1.txt  train_NLA_398561794EDR_F0030004NCAM00400M1.txt  train_NLA_398561822EDR_F0030004NCAM00400M1.txt  train_NLA_398645812EDR_F0030004NCAM15000M1.txt  train_NLA_398646382EDR_F0030004NCAM15000M1.txt  train_NLA_398646643EDR_F0030004NCAM15000M1.txt  train_NLA_398646918EDR_F0030004NCAM15000M1.txt  train_NLA_398742207EDR_F0030004NCAM00105M1.txt  train_NLA_398742240EDR_F0030004NCAM00105M1.txt  (+54 more)
src/interfaces/: CMakeLists.txt  package.xml
src/interfaces/msg/: Dummy.msg
src/sne/: CMakeLists.txt  package.xml
src/sne/config/: thyra_params.yaml
src/sne/scripts/: run_example.py  sne.py
src/sne/scripts/DIODE_dataset/depth/: depth_3.npy  depth_4.npy
src/sne/scripts/DIODE_dataset/depth_mask/: depth_mask_1.npy  depth_mask_4.npy  depth_mask_6.npy
src/sne/src/: surface_normal_estimator.cpp
src/surface_normal_estimator/: CMakeLists.txt  package.xml
src/surface_normal_estimator/DIODE_dataset/depth/: depth_1.npy  depth_2.npy  depth_5.npy  depth_6.npy
src/surface_normal_estimator/DIODE_dataset/depth_mask/: depth_mask_2.npy  depth_mask_3.npy  depth_mask_5.npy
src/surface_normal_estimator/Rviz/: SNE_Rviz_setup.rviz
src/surface_normal_estimator/config/: thyra_params_sim.yaml
src/surface_normal_estimator/scripts/: SNE.py  image_displayer.py  image_saver.py  run_example.py
src/surface_normal_estimator/src/: depth_publisher.cpp  surface_normal_estimator.cpp
src/terrain_segmentation/: CMakeLists.txt  package.xml  readme
src/terrain_segmentation/config/: seg_train.yaml
src/terrain_segmentation/launch/: yolo_trainer.py
src/terrain_segmentation/scripts/: convert_mars_data_to_yolo.py  debug_dataset.py  hyperparams_tune.py  mars_seg.py  train_model.py  visualize_dataset.py
