<?xml version="1.0"?>
<package format="3">
  <name>terrain_segmentation</name>
  <version>0.0.1</version>
  <description>ROS 2 package for terrain semantic segmentation using Ultralytics</description>
  <maintainer email="mdaro22@student.aau.dk">Magnus</maintainer>
  <license>Apache-2.0</license>




  <!-- Build tool dependencies -->
  <buildtool_depend>ament_cmake</buildtool_depend>
  <buildtool_depend>ament_cmake_python</buildtool_depend>

  <!-- ROS 2 dependencies -->
  <depend>rclcpp</depend>
  <depend>rclpy</depend>
  <depend>sensor_msgs</depend>
  <depend>interfaces</depend>
  <depend>cv_bridge</depend>

  <!-- Python dependencies -->
  <exec_depend>python3-opencv</exec_depend>
  <exec_depend>python3-numpy</exec_depend>
  <exec_depend>python3-pip</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>